# renpy-translate-studio

./: LICENSE  README.md  README_CN.md  pyproject.toml
scripts/: build_flet_windows.ps1  renpy_translate_pipeline.py
src/app1/: app1.py
src/app1/res/: config.yml
src/common/: app_context.py  proxy.py
src/common/conf/: config.py
src/common/log/: logger_factory.py
test/: config-test.yml  test_runner.py
